// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`XAxisBottomLine UnitTest renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "stroke": "#ffffff",
            "x1": 0,
            "x2": 400,
            "y1": 200,
            "y2": 200,
          },
          "type": "Line",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`XAxisBottomLine UnitTest renders with different dimensions 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "stroke": "#aaaaaa",
            "x1": 0,
            "x2": 600,
            "y1": 100,
            "y2": 100,
          },
          "type": "Line",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`XAxisTopLine UnitTest renders correctly 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "stroke": "#ffffff",
            "x1": 0,
            "x2": 400,
            "y1": 0,
            "y2": 0,
          },
          "type": "Line",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;

exports[`XAxisTopLine UnitTest renders with different width and color 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": null,
          "props": {
            "stroke": "#cccccc",
            "x1": 0,
            "x2": 800,
            "y1": 0,
            "y2": 0,
          },
          "type": "Line",
        },
      ],
      "props": {
        "collapsable": false,
        "pointerEvents": "box-none",
        "style": {
          "flex": 1,
        },
      },
      "type": "View",
    },
  ],
  "props": {
    "style": [
      {
        "flex": 1,
      },
      undefined,
    ],
  },
  "type": "View",
}
`;
